load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")

android_binary(
    name = "sample-android-flavor1-free-debug",
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample.free",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android-flavor1-free-debug",
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor1-free-debug",
        ":sample-android_lib-flavor1-free-debug",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
        "@maven//:androidx_databinding_viewbinding",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android_lib-flavor1-free-debug-build-config",
    package_name = "com.grab.grazel.android.sample",
    booleans = {
        "SOME_BOOLEAN": "false",
    },
    ints = {
        "SOME_INT": 0,
        "VERSION_CODE": 1,
    },
    longs = {
        "SOME_LONG": 0,
    },
    strings = {
        "SOME_STRING": "Something",
        "VERSION_NAME": "1.0",
        "VARIANT_NAME": "flavor1FreeDebug",
    },
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@grab_bazel_common//tools/res_value:res_value.bzl", "res_value")
load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android_lib-flavor1-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "com.grab.grazel.android.sample",
    manifest = "src/debug/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android_lib-flavor1-free-debug",
    ) + res_value(
        name = "sample-android_lib-flavor1-free-debug-res-value",
        strings = {
            "generated_value": "important-key",
            "type": "debug",
            "flavor": "free",
        },
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android_lib-flavor1-free-debug-build-config",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor1-free-debug",
        "//sample-android-library:sample-android-library-flavor1-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")

crashlytics_android_library(
    name = "crashlytics-flavor1-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/flavor1Free/google-services.json",
    ),
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")

android_binary(
    name = "sample-android-flavor1-paid-debug",
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample.paid",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android-flavor1-paid-debug",
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor1-paid-debug",
        ":sample-android_lib-flavor1-paid-debug",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
        "@maven//:androidx_databinding_viewbinding",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android_lib-flavor1-paid-debug-build-config",
    package_name = "com.grab.grazel.android.sample",
    booleans = {
        "SOME_BOOLEAN": "false",
    },
    ints = {
        "SOME_INT": 0,
        "VERSION_CODE": 1,
    },
    longs = {
        "SOME_LONG": 0,
    },
    strings = {
        "SOME_STRING": "Something",
        "VERSION_NAME": "1.0",
        "VARIANT_NAME": "flavor1PaidDebug",
    },
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@grab_bazel_common//tools/res_value:res_value.bzl", "res_value")
load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android_lib-flavor1-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "com.grab.grazel.android.sample",
    manifest = "src/debug/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android_lib-flavor1-paid-debug",
    ) + res_value(
        name = "sample-android_lib-flavor1-paid-debug-res-value",
        strings = {
            "generated_value": "important-key",
            "type": "debug",
            "flavor": "paid",
        },
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android_lib-flavor1-paid-debug-build-config",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor1-paid-debug",
        "//sample-android-library:sample-android-library-flavor1-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")

crashlytics_android_library(
    name = "crashlytics-flavor1-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/flavor1Paid/google-services.json",
    ),
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")

android_binary(
    name = "sample-android-flavor2-free-debug",
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample.free",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android-flavor2-free-debug",
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor2-free-debug",
        ":sample-android_lib-flavor2-free-debug",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
        "@maven//:androidx_databinding_viewbinding",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android_lib-flavor2-free-debug-build-config",
    package_name = "com.grab.grazel.android.sample",
    booleans = {
        "SOME_BOOLEAN": "false",
    },
    ints = {
        "SOME_INT": 0,
        "VERSION_CODE": 1,
    },
    longs = {
        "SOME_LONG": 0,
    },
    strings = {
        "SOME_STRING": "Something",
        "VERSION_NAME": "1.0",
        "VARIANT_NAME": "flavor2FreeDebug",
    },
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@grab_bazel_common//tools/res_value:res_value.bzl", "res_value")
load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android_lib-flavor2-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "com.grab.grazel.android.sample",
    manifest = "src/debug/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android_lib-flavor2-free-debug",
    ) + res_value(
        name = "sample-android_lib-flavor2-free-debug-res-value",
        strings = {
            "generated_value": "important-key",
            "type": "debug",
            "flavor": "free",
        },
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android_lib-flavor2-free-debug-build-config",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor2-free-debug",
        "//sample-android-library:sample-android-library-flavor2-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")

crashlytics_android_library(
    name = "crashlytics-flavor2-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/flavor2Free/google-services.json",
    ),
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")

android_binary(
    name = "sample-android-flavor2-paid-debug",
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample.paid",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android-flavor2-paid-debug",
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor2-paid-debug",
        ":sample-android_lib-flavor2-paid-debug",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
        "@maven//:androidx_databinding_viewbinding",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android_lib-flavor2-paid-debug-build-config",
    package_name = "com.grab.grazel.android.sample",
    booleans = {
        "SOME_BOOLEAN": "false",
    },
    ints = {
        "SOME_INT": 0,
        "VERSION_CODE": 1,
    },
    longs = {
        "SOME_LONG": 0,
    },
    strings = {
        "SOME_STRING": "Something",
        "VERSION_NAME": "1.0",
        "VARIANT_NAME": "flavor2PaidDebug",
    },
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@grab_bazel_common//tools/res_value:res_value.bzl", "res_value")
load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android_lib-flavor2-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "com.grab.grazel.android.sample",
    manifest = "src/debug/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android_lib-flavor2-paid-debug",
    ) + res_value(
        name = "sample-android_lib-flavor2-paid-debug-res-value",
        strings = {
            "generated_value": "important-key",
            "type": "debug",
            "flavor": "paid",
        },
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android_lib-flavor2-paid-debug-build-config",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor2-paid-debug",
        "//sample-android-library:sample-android-library-flavor2-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")

crashlytics_android_library(
    name = "crashlytics-flavor2-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/flavor2Paid/google-services.json",
    ),
)

load("@grab_bazel_common//android/test:instrumentation.bzl", "android_instrumentation_binary")

android_instrumentation_binary(
    name = "sample-android-flavor1-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:sample-android_lib-flavor1-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor1-free-debug",
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:sample-android_lib-flavor1-free-debug",
        "//sample-android-flavor:sample-android-flavor-flavor1-free-debug",
        "//sample-android-library:sample-android-library-flavor1-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@grab_bazel_common//android/test:instrumentation.bzl", "android_instrumentation_binary")

android_instrumentation_binary(
    name = "sample-android-flavor1-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:sample-android_lib-flavor1-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor1-paid-debug",
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:sample-android_lib-flavor1-paid-debug",
        "//sample-android-flavor:sample-android-flavor-flavor1-paid-debug",
        "//sample-android-library:sample-android-library-flavor1-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@grab_bazel_common//android/test:instrumentation.bzl", "android_instrumentation_binary")

android_instrumentation_binary(
    name = "sample-android-flavor2-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:sample-android_lib-flavor2-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor2-free-debug",
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:sample-android_lib-flavor2-free-debug",
        "//sample-android-flavor:sample-android-flavor-flavor2-free-debug",
        "//sample-android-library:sample-android-library-flavor2-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

load("@grab_bazel_common//android/test:instrumentation.bzl", "android_instrumentation_binary")

android_instrumentation_binary(
    name = "sample-android-flavor2-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:sample-android_lib-flavor2-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor2-paid-debug",
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:sample-android_lib-flavor2-paid-debug",
        "//sample-android-flavor:sample-android-flavor-flavor2-paid-debug",
        "//sample-android-library:sample-android-library-flavor2-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)
