load("@grab_bazel_common//android/test:instrumentation.bzl", "android_instrumentation_binary")
load("@grab_bazel_common//rules:defs.bzl", "android_binary")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")
load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")

android_binary(
    name = "sample-android-flavor1-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "flavor1FreeDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.free",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "free",
        },
    },
    resources = {
        "src/main/res-debug": {
        },
        "src/free/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor1-free-debug",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor1-free-debug",
        "//sample-android-library:sample-android-library-flavor1-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

crashlytics_android_library(
    name = "crashlytics-flavor1-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/flavor1FreeDebug/google-services.json",
    ),
)

android_binary(
    name = "sample-android-flavor1-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "flavor1PaidDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.paid",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "paid",
        },
    },
    resources = {
        "src/main/res-debug": {
        },
        "src/paid/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor1-paid-debug",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor1-paid-debug",
        "//sample-android-library:sample-android-library-flavor1-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

crashlytics_android_library(
    name = "crashlytics-flavor1-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/flavor1Paid/google-services.json",
    ),
)

android_binary(
    name = "sample-android-flavor2-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "flavor2FreeDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.free",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "free",
        },
    },
    resources = {
        "src/main/res-debug": {
        },
        "src/free/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor2-free-debug",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor2-free-debug",
        "//sample-android-library:sample-android-library-flavor2-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

crashlytics_android_library(
    name = "crashlytics-flavor2-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/flavor2Free/google-services.json",
    ),
)

android_binary(
    name = "sample-android-flavor2-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "flavor2PaidDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = True,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.paid",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "paid",
        },
    },
    resources = {
        "src/main/res-debug": {
        },
        "src/paid/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-flavor2-paid-debug",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor:sample-android-flavor-flavor2-paid-debug",
        "//sample-android-library:sample-android-library-flavor2-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

crashlytics_android_library(
    name = "crashlytics-flavor2-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/flavor2Paid/google-services.json",
    ),
)

android_instrumentation_binary(
    name = "sample-android-flavor1-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-flavor1-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor1-free-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.free.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:lib_sample-android-flavor1-free-debug",
        "//sample-android-flavor:sample-android-flavor-flavor1-free-debug",
        "//sample-android-library:sample-android-library-flavor1-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

android_instrumentation_binary(
    name = "sample-android-flavor1-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-flavor1-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor1-paid-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.paid.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:lib_sample-android-flavor1-paid-debug",
        "//sample-android-flavor:sample-android-flavor-flavor1-paid-debug",
        "//sample-android-library:sample-android-library-flavor1-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

android_instrumentation_binary(
    name = "sample-android-flavor2-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-flavor2-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor2-free-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.free.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:lib_sample-android-flavor2-free-debug",
        "//sample-android-flavor:sample-android-flavor-flavor2-free-debug",
        "//sample-android-library:sample-android-library-flavor2-free-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)

android_instrumentation_binary(
    name = "sample-android-flavor2-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-flavor2-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    instruments = ":sample-android-flavor2-paid-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample.paid.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//sample-android:lib_sample-android-flavor2-paid-debug",
        "//sample-android-flavor:sample-android-flavor-flavor2-paid-debug",
        "//sample-android-library:sample-android-library-flavor2-paid-debug",
        "//sample-kotlin-library",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)
